--- a/Leetcode/15-3Sum.md
+++ b/Leetcode/15-3Sum.md
@@ -4,7 +4,25 @@
 > - Type: Two Pointers
 > - [link](https://leetcode.com/problems/3sum/)
 
-## Solution
+## Solution 1 - Brute Force
+- Time complexity: O(n^3)
+
+```python
+def threeSum(self, nums: List[int]) -> List[List[int]]:
+    res = []
+    for i in range(len(nums)-2):
+        for j in range(i + 1, len(nums)-1):
+            for k in range(j+1, len(nums)):
+
+                if (nums[i] + nums[j] + nums[k] == 0):
+                    triplet = sorted([nums[i], nums[j], nums[k]])
+
+                    if triplet not in res:
+                        res.append(triplet)
+    return res
+```
+
+## Solution 2 
 - Time complexity: O(n log n ) + O(n^2) -> reduces to O(n^2)
 - Time complexity: Sorting + two loops
 
@@ -20,7 +38,10 @@ class Solution:
         nums.sort()
 
         for i, a in enumerate(nums):
-            
+            # Skip positive integers
+            if a > 0:
+                break
+
             if i > 0 and a == nums[i - 1]:
                 continue
 
