--- a/Leetcode/15-3Sum.md
+++ b/Leetcode/15-3Sum.md
@@ -4,6 +4,10 @@
 > - Type: Two Pointers
 > - [link](https://leetcode.com/problems/3sum/)
 
+## Videos
+- https://www.youtube.com/watch?v=jzZsG8n2R9A (NeetCode)
+- https://www.youtube.com/watch?v=hNRS81I1OZ8 (DataDaft)
+
 ## Solution 1 - Brute Force
 - Time complexity: O(n^3)
 
