--- a/Leetcode/15-3Sum.md
+++ b/Leetcode/15-3Sum.md
@@ -39,17 +39,19 @@ class Solution:
         # Sort the input array so the problem becomes a problem we solved from Two Sum II using two pointers.
 
         res = []
-        nums.sort()
+        nums = sorted(nums)
 
-        for i, a in enumerate(nums):
+        for i in range(len(nums)-2):
+
             # Skip positive integers
-            if a > 0:
+            if nums[i] > 0:
                 break
 
-            if i > 0 and a == nums[i - 1]:
+            if i > 0 and nums[i-1] == nums[i]:
                 continue
 
             l, r = i + 1, len(nums) - 1
+            
             while l < r:
                 threeSum = a + nums[l] + nums[r]
                 if threeSum > 0:
