--- a/Leetcode/15-3Sum.md
+++ b/Leetcode/15-3Sum.md
@@ -53,7 +53,7 @@ class Solution:
             l, r = i + 1, len(nums) - 1
             
             while l < r:
-                threeSum = a + nums[l] + nums[r]
+                threeSum = nums[i] + nums[l] + nums[r]
                 if threeSum > 0:
                     r -= 1
                 elif threeSum < 0:
