--- a/Leetcode/15-3Sum.md
+++ b/Leetcode/15-3Sum.md
@@ -59,7 +59,7 @@ class Solution:
                 elif threeSum < 0:
                     l += 1
                 else:
-                    res.append([a, nums[l], nums[r]])
+                    res.append([nums[i], nums[l], nums[r]])
                     l += 1
                     while nums[l] == nums[l - 1] and l < r:
                         l += 1
