--- a/Leetcode/15-3Sum.md
+++ b/Leetcode/15-3Sum.md
@@ -46,7 +46,7 @@ class Solution:
             # Skip positive integers
             if nums[i] > 0:
                 break
-
+            # We don't want to re-use the same i value from before
             if i > 0 and nums[i-1] == nums[i]:
                 continue
 
