LC-3Sum Better version

--- a/Leetcode/15-3Sum.md
+++ b/Leetcode/15-3Sum.md
@@ -29,6 +29,7 @@ def threeSum(self, nums: List[int]) -> List[List[int]]:
 ## Solution 2 
 - Time complexity: O(n log n ) + O(n^2) -> reduces to O(n^2)
 - Time complexity: Sorting + two loops
+- https://www.hellointerview.com/learn/code/two-pointers/3-sum
 
 - Space complexity: O(1) or O(n)
 
@@ -39,13 +40,14 @@ class Solution:
         # Sort the input array so the problem becomes a problem we solved from Two Sum II using two pointers.
 
         res = []
-        nums = sorted(nums)
+        nums.sort()
 
         for i in range(len(nums)-2):
 
             # Skip positive integers
             if nums[i] > 0:
                 break
+
             # We don't want to re-use the same i value from before
             if i > 0 and nums[i-1] == nums[i]:
                 continue
@@ -60,9 +62,12 @@ class Solution:
                     l += 1
                 else:
                     res.append([nums[i], nums[l], nums[r]])
-                    l += 1
-                    while nums[l] == nums[l - 1] and l < r:
-                        l += 1
+                    l+=1
+                    r-=1
+                    while l < r and nums[l] == nums[l-1]:
+                        l+=1
+                    while l < r and nums[r] == nums[r+1]:
+                        r-=1
                         
         return res
 ```
