--- a/Leetcode/15-3Sum.md
+++ b/Leetcode/15-3Sum.md
@@ -14,8 +14,8 @@
 ```python
 def threeSum(self, nums: List[int]) -> List[List[int]]:
     res = []
-    for i in range(len(nums)-2):
-        for j in range(i + 1, len(nums)-1):
+    for i in range(len(nums)):
+        for j in range(i+1, len(nums)):
             for k in range(j+1, len(nums)):
 
                 if (nums[i] + nums[j] + nums[k] == 0):
